fixed overflow and bottom scrollbar appearing

--- a/webserver/static/css/column-layout.css
+++ b/webserver/static/css/column-layout.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
-    font-family: Arial
+    font-family: Arial;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 :root {
